# makobot

./: .gitmodules  README.md  ids.launch  setup.bash
deprecated/launch/: ids_port.launch  ids_strbd.launch  makobot.launch
deprecated/makobot_bridge/: CMakeLists.txt  package.xml
deprecated/makobot_bridge/launch/: front_camera.launch  makobot_bridge.launch  makobot_start.launch
deprecated/makobot_bridge/src/: MakobotBridge.py  Video.cpp  makobot_bridge_node.cpp  pixhawk_bridge_node.cpp
deprecated/makobot_teleop/: package.xml
deprecated/makobot_teleop/makobot_teleop.d/: README.md  attach-usbip.sh  makobot_teleop.service  run_teleop.sh
deprecated/makobot_teleop/src/: makobot_teleop.cpp
deprecated/makobot_teleop/udev/: 60-symlinks.rules  99-controllers.rules
makobot/: CMakeLists.txt  package.xml
makobot/cfg/: 01-netcfg-fitlet.yaml  machines.xml  makobot.machine
makobot/launch/: makobot.launch  record_camera_imu.launch
makobot/network-cfg/: interfaces-fitlet  interfaces-topside
makobot/rviz/: makobot.config  makobot.rviz
makobot/system-cfg/: makobot_env.bash
makobot/system-cfg/fitlet2/: interfaces  interfaces-internet-sharing
makobot_bridge/: CMakeLists.txt  package.xml
makobot_bridge/include/: Makobot.h  MakobotBridge.h  Video.h
makobot_bridge/include/makobot_bridge/: PixhawkBridge.h
makobot_bridge/launch/: apm.launch  makobot.launch  makobot_bridge.launch  makobot_start.launch  makobot_start.launch.old  stereo.launch
makobot_bridge/msg/: Makobot.msg
makobot_bridge/nodes/: makobot_bridge.py  makobot_bridge_node.py  user.py
makobot_bridge/src/: makobot_bridge.cpp
makobot_dev/: CMakeLists.txt  package.xml
makobot_dev/cfg/: acA2040-35gc_22825892.pfs  basler1.yaml  basler2.yaml
makobot_dev/launch/: basler_stereo_rectified.launch  basler_stereo_unrectified.launch  pylon_camera_node1.launch
makobot_msgs/: CMakeLists.txt  package.xml
makobot_teleop/: CMakeLists.txt  CMakeLists.txt.old  package.xml  package.xml.old
makobot_teleop/cfg/: teleop_joy.cfg  xbox_joy.cfg
makobot_teleop/include/: MakobotTeleop.h
makobot_teleop/launch/: teleop.launch  teleop_f310.launch  teleop_xbox.launch
makobot_teleop/makobot_teleop.d/: README.md  attach-usbip.sh  conf_usbip.d  run_teleop.sh  usbip-bind  usbip-bind.service  usbipd.service
makobot_teleop/src/: makobot_teleop.cpp  teleop_joy.cpp
makobot_teleop/srv/: Arm.srv
makobot_teleop/udev/: 60-symlinks.rules  99-controllers.rules
ptgrey/: Dockerfile  camera.launch  camera2.launch  run_docker  stereo.launch
