<?xml version="1.0"?>
<package>
  <name>makobot</name>
  <version>1.0.0</version>
  <description>Toplevel package containing launch and config files for running makobot system.</description>

  <maintainer email="awilby@eng.ucsd.edu">Antonella Wilby</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export></export>
</package>
