<?xml version="1.0"?>
<package format="2">
  <name>makobot</name>
  <version>1.0.0</version>
  <description>Toplevel package containing launch and config files for running makobot system.</description>

  <maintainer email="awilby@eng.ucsd.edu">Antonella Wilby</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>bluerov</exec_depend>
  <exec_depend>bluerov_robot</exec_depend>
  <exec_depend>makobot_vision</exec_depend>
  <exec_depend>microstrain_3dmgx2_imu</exec_depend>


  <export></export>
</package>
