<?xml version="1.0"?>
<package>
  <name>makobot_bridge</name>
  <version>1.0.0</version>
  <description>The makobot_bridge package</description>

  <maintainer email="awilby@eng.ucsd.edu">Antonella Wilby</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/makobot_bridge</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>mavros</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>

  <export></export>

</package>
