<?xml version="1.0"?>

<package>
  <name>makobot_teleop</name>
  <version>1.0.0</version>
  <description>Teleoperation package for MakoBot.</description>

  <maintainer email="awilby@eng.ucsd.edu">Antonella Wilby</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>makobot_bridge</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>makobot_bridge</run_depend>

</package>
